exports[`consistent-type-imports > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-imports",
      "messageId": "typeOverValue",
      "message": "All imports in the declaration are only used as types. Use \`import type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 2,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-type-imports > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-imports",
      "messageId": "typeOverValue",
      "message": "All imports in the declaration are only used as types. Use \`import type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 2,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-type-imports > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-imports",
      "messageId": "typeOverValue",
      "message": "All imports in the declaration are only used as types. Use \`import type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 2,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-type-imports > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-imports",
      "messageId": "typeOverValue",
      "message": "All imports in the declaration are only used as types. Use \`import type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 2,
          "column": 28
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-type-imports > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-imports",
      "messageId": "typeOverValue",
      "message": "All imports in the declaration are only used as types. Use \`import type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 2,
          "column": 38
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-type-imports > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-imports",
      "messageId": "typeOverValue",
      "message": "All imports in the declaration are only used as types. Use \`import type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 2,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-type-imports > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-imports",
      "messageId": "typeOverValue",
      "message": "All imports in the declaration are only used as types. Use \`import type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 2,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-type-imports > invalid 8`] = `
{
  "diagnostics": [],
  "errorCount": 0,
  "fileCount": 1,
  "ruleCount": 1
}
`;
